# mcp_server_project

./: .dockerignore  .env.example  .env.sample  .flake8  .gitguardian.yaml  .gitguardian.yml  .gitignore  .pre-commit-config.yaml  =1.11  =2.1.0  CODE_OF_CONDUCT.md  DOCKER.md  Dockerfile  FASTMCP_LIFESPAN_ISSUE_REPORT.md  Makefile  PRODUCTION_READINESS_REPORT.md  README.md  ROBUST_TESTING_STRATEGY.md  SECURITY.md  build_log.txt  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-windows.txt  requirements.txt  test_docker.sh  test_mcp.py  test_mcp_client.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: cli.py  config.py  docs_app.py  logging_config.py  main.py  monitoring.py  settings.py  tools.py
app/mcp/: client.py
app/mcp/adapters/api/: rest_api_adapter.py
app/mcp/core/: adapter.py
package_control_channel/: channel.json  readme.md
package_control_channel/.github/: PULL_REQUEST_TEMPLATE.md
package_control_channel/.github/workflows/: ci.yml  package_review.yml
package_control_channel/repository/: a.json  b.json  c.json  d.json  dependencies.json  e.json  f.json  g.json  h.json  i.json  j.json  k.json  l.json  m.json  n.json  o.json  p.json  q.json  r.json  s.json  t.json  u.json  v.json  w.json  x.json  y.json  z.json
package_control_channel/tests/: test.py  unittest_compat.py
package_control_channel/utils/: migrator.py  non_python_packages.py  redirect301.py
shared_host_folder/: hello.txt  smoke.txt
shared_host_folder/test_client_final_final_dir/: hello_mcp_client_ultimate.txt
tests/: conftest.py  test_basic_setup.py  test_fastmcp_integration.py  test_integration.py  test_mcp.py  test_mcp_client.py  test_mcp_client_legacy.py  test_mcp_implementation.py  test_mcp_session.py  test_mcp_smoke_simple.py  test_robust_integration.py  test_simple.py  test_simple_mcp.py  test_tools.py
tests/integration/: test_mcp_smoke.py
(+5 files in other folders)
